--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ dataset/ClaimPredictionChallenge/example_uncompressed_entry.csv
 dataset/ClaimPredictionChallenge/example_compressed_entry.zip
 dataset/ClaimPredictionChallenge/example_compressed_entry.csv.gz
 xgb_sample.py
+model_version/v1_初版.py
+.gitignore
+model_version/v2.1_index报错.py
+model_version/v2.2_exact_索引.ipynb
+model_version/v2_各类功能.ipynb
