--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ model_version/v4_并行问题解决_索引报错.ipynb
 model_version/v3.1_仍然有并行超时.ipynb
 model_version/v3_未使用numba并行.ipynb
 model_version/v4.1可运行_但不同算法时间差.ipynb
+read_material/Group_32(1).pdf
+read_material/XGBoost.html
+read_material/XGBoost.pdf
+阅读材料/Group_32(1).pdf
+阅读材料/XGBoost.html
+阅读材料/XGBoost.pdf
